<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UMCYCLE</string>
    <string name="tvIntro">UM-CYCLE</string>
    <string name="edtLoginId">ID를 입력하세요</string>
    <string name="edtLoginPw">PW를 입력하세요</string>
    <string name="btnLogin">로그인</string>
    <string name="tvJoin">회원가입하기</string>
    <string name="btnKakaoLogin">카카오로 시작하기</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="tvJoinTitle">회원가입</string>
    <string name="edtJoinId">아이디</string>
    <string name="btnIdCheck">중복확인</string>
    <string name="edtJoinPw">비밀번호</string>
    <string name="edtJoinPwCheck">비밀번호 확인</string>
    <string name="edtJoinNick">닉네임</string>
    <string name="edtJoinEmail">이메일</string>
    <string name="edtJoinName">이름(실명 입력)</string>
    <string name="edtJoinPhone">휴대전화번호</string>
    <string name="edtJoinAddr">주소</string>
    <string name="ckAllCheck">모두 동의합니다.</string>
    <string name="tvMore">(보기)</string>
    <string name="ckTerms">이용약관 동의(필수)</string>
    <string name="ckPersonal">개인정보 취급방침 동의(필수)</string>
    <string name="ckMarketing">마케팅 정보 수신 동의</string>
    <string name="btnJoin">가입하기</string>
    <string name="tvToday">오늘</string>
    <string name="tvWeatherAnd">은</string>
    <string name="tvWeatherTemp">현재 기온</string>
    <string name="tvWeatherWind">현재 풍속</string>
    <string name="fragMain">홈</string>
    <string name="fragCommu">커뮤니티</string>
    <string name="fragMyPage">마이페이지</string>
    <string name="fragMore">더보기</string>
    <string name="btnFare">UM-CYCLE 이용 요금 안내</string>
    <string name="tvMapCard1">UM-CYCLE</string>
    <string name="tvMapCard2">보관함 찾기</string>
    <string name="tvQrCard1">QR 스캔으로</string>
    <string name="tvQrCard2">빠른 대여</string>
    <string name="tvServiceCard1">UM-CYCLE</string>
    <string name="tvServiceCard2">서비스 안내</string>
    <string name="tvSupportCard1">1:1 문의</string>
    <string name="tvSupportCard2">고객센터</string>
    <string name="tvNickMypageCard">USER</string>
    <string name="tvWelcomeMypageCard">님 환영합니다!</string>
    <string name="tvComment1MypageCard">오늘까지 총</string>
    <string name="tvCarbonMypageCard">692g</string>
    <string name="tvComment2MypageCard">의 탄소 절약!</string>
    <string name="tvRatingTextMypageCard">회원 등급</string>
    <string name="tvRatingMypageCard">U</string>
    <string name="tvPointTextMypageCard">보유 포인트</string>
    <string name="tvPointMypageCard">100p</string>
    <string name="tvCouponTextMypageCard">보유 쿠폰</string>
    <string name="tvCouponMypageCard">1개</string>
    <string name="btnNoticeEvent">공지사항 &amp; 이벤트 확인하기</string>
    <string name="tvCommuTitle">커뮤니티</string>
    <string name="btnCmWrite">글쓰기</string>
    <string name="btnWriteCancel">취소</string>
    <string name="tvWrite">글쓰기</string>
    <string name="btnWriteSend">등록</string>
    <string name="edtWriteTitle">제목</string>
    <string name="edtWriteContent">본문</string>
    <string name="btnModifyCancel">취소</string>
    <string name="tvModify">글수정</string>
    <string name="btnModifySend">수정</string>
    <string name="edtModifyTitle">제목</string>
    <string name="edtModifyContent">본문</string>
    <string name="tvPostCommu">커뮤니티</string>
    <string name="tvPostTitle">글 제목</string>
    <string name="tvPostNick">작성자 닉네임</string>
    <string name="tvPostPl1">(</string>
    <string name="tvPostPl2">)</string>
    <string name="tvPostId">ID***</string>
    <string name="tvPostTime">2022.05.12. 17:21</string>
    <string name="tvPostCnt">조회 15</string>
    <string name="tvPostContent">본문 내용</string>
    <string name="btnPostModify">수정</string>
    <string name="btnPostDelete">삭제</string>
    <string name="btnPostComment">댓글 보기</string>
    <string name="boardTitle">글 제목</string>
    <string name="boardNick">작성자 닉네임</string>
    <string name="boardTime">2022.05.12. 17:21</string>
    <string name="boardSeq">00</string>
    <string name="edtComment">댓글 작성하기</string>
    <string name="btnComment">등록</string>
    <string name="tvCommentNick">작성자 닉네임</string>
    <string name="tvWriter">작성자</string>
    <string name="tvSeq">00</string>
    <string name="tvPostSeq">00</string>
    <string name="tvCommentContent">댓글 내용</string>
    <string name="edtCommentContent">수정할 내용</string>
    <string name="tvCommentTime">2022.05.13 10:42</string>
    <string name="tvCommentDel">삭제</string>
    <string name="tvCommentModify">수정</string>
    <string name="tvCommentSuccess">완료</string>
    <string name="tvCommentReport">신고</string>
    <string name="tabNotice">공지사항</string>
    <string name="tabEvent">이벤트</string>
    <string name="noticeTitle">UmCycle 서비스 오픈!</string>
    <string name="noticeTime">2022.05.23 16:00</string>
    <string name="noticeSeq">00</string>
    <string name="eventTitle">UmCycle 사용 인증 이벤트!</string>
    <string name="eventStart">2022.05.23</string>
    <string name="eventDash">-</string>
    <string name="eventEnd">2022.06.30</string>
    <string name="eventSeq">00</string>
    <string name="eventPost">이벤트</string>
    <string name="eventPostTitle">UmCycle 사용 인증 이벤트!</string>
    <string name="eventPostTime">2022. 05. 23. 16:20</string>
    <string name="eventPostContent">UmCycle 서비스를 이용한 후 고객센터로 인증샷을 보내주시면 추첨을 통해 문화상품권(5천원권)과 UmCycle 이용 시 사용할 수 있는 쿠폰을 드립니다.</string>
    <string name="eventPostSeq">00</string>
    <string name="eventPostCnt">조회 13</string>
    <string name="noticePost">공지사항</string>
    <string name="noticePostTitle">UmCycle 서비스 오픈!</string>
    <string name="noticePostTime">2022. 05. 23. 16:00</string>
    <string name="noticePostContent">안녕하세요, UmGrade입니다.</string>
    <string name="noticePostSeq">00</string>
    <string name="noticePostCnt">조회 13</string>
    <string name="tvScanner">사각 테두리 안에 QR 코드를 인식해 주세요</string>
    <string name="tvMoreNick">User Nick</string>
    <string name="btnMoreUserInfo">회원 정보 수정</string>
    <string name="btnMoreSearch">가까운 보관함 찾기</string>
    <string name="btnMoreQr">우산 대여하기</string>
    <string name="btnMoreCommu">커뮤니티</string>
    <string name="btnMoreNotice">공지사항 &amp; 이벤트 확인</string>
    <string name="btnMoreService">서비스 안내</string>
    <string name="btnMoreSupport">고객센터</string>
    <string name="btnMoreTerms">이용 약관 확인</string>
    <string name="tvTerms">위치기반서비스 이용약관</string>
    <string name="tvPrivacy">개인정보 처리방침</string>
    <string name="tvServiceInfo">서비스 이용약관</string>
    <string name="btnTermsClose">닫기</string>
    <string name="tvSupport">문의 작성하기</string>
    <string name="tvSupportCount">0/1000</string>
    <string name="tvSupportTitle">고객센터</string>
    <string name="btnSupportWrite">문의하기</string>
    <string name="supportTitle">문의글 제목</string>
    <string name="tvSet">처리중</string>
    <string name="supportSeq">00</string>
    <string name="supportTime">2022. 04. 35 16:42</string>
    <string name="tvUserId">UserID</string>
    <string name="btnProfileUpdate">프로필 수정</string>
    <string name="btnPayment">결제관리</string>
    <string name="btnUsageHistory">이용내역</string>
    <string name="btnAccountSetting">정보수정</string>
    <string name="btnLogout">로그아웃</string>
    <string name="tvProfileTitle">프로필 수정</string>
    <string name="edtNickHint">닉네임을 입력하세요</string>
    <string name="tvProfileNIckhint">※최대 10글자까지 입력 가능합니다</string>
    <string name="btnProfileChange">완료</string>
    <string name="supportPostTitle">문의글 제목</string>
    <string name="supportPostTime">2022. 04. 35 16:42</string>
    <string name="tvSupportSet">처리중</string>
    <string name="supportPostContent">본문 내용</string>
    <string name="btnSupportDelete">삭제</string>
    <string name="supportPostSeq">00</string>
    <string name="tvSupportPostComment">답변을 기다리고 있어요</string>
    <string name="btnSupportComment">전송</string>
    <string name="edtSupportComment">문의 답변하기</string>
    <string name="tvFareTitle">UM-CYCLE 이용 요금 안내</string>
    <string name="tvFareService">이용 요금 안내</string>
    <string name="tvFare">이용 요금 = 기본 800원 + 하루(24시간)당 요금 * 800원</string>
    <string name="tvFareOne">* 이용 요금은 우산 반납 시 자동 결제됩니다.</string>
    <string name="tvFareTwo">* 우산 대여 후 60분 이내에 반납할 경우 대여 비용이 발생하지 않습니다.</string>
    <string name="tvFareThree">* 미반납일이 7일을 초과할 경우 반납하지 않은 우산은 분실 처리되며, 대여 비용 5,600원에 미납금 8,000원이 자동으로 결제됩니다.</string>
    <string name="tvServiceTitle">UM-CYCLE 서비스 안내</string>
    <string name="tvServiceService">서비스 안내</string>
    <string name="tvServiceText1">UmCycle의 이용 순서를 안내해드립니다.</string>
    <string name="tvServiceText2">우산 대여 시 다음 내용을 숙지 바랍니다.</string>
    <string name="tvService1">1. 지도에서 주변에 있는 보관함을 검색합니다.</string>
    <string name="tvService2">2. 애플리케이션에서 보관함의 QR 코드를 스캔합니다.</string>
    <string name="tvService3">3. 보관함의 잠금장치가 열리면 우산을 골라 대여합니다.</string>
    <string name="tvService4">4. 우산을 가지고 가기 전 파손 여부를 확인해주세요.</string>
    <string name="tvService5">5. 만약 우산이 파손되었다면 파손 신고 후 파손 우산을 반납해주세요. 파손 신고 시 다른 우산을 재대여할 수 있습니다.</string>
    <string name="tvService6">6. 우산 대여 비용은 1일(24시간)에 800원이며, 대여비는 반납 시에 등록된 결제정보에서 자동결제 됩니다.</string>
    <string name="tvService7">7. 우산을 반납할 때도 근처의 보관함을 검색합니다.</string>
    <string name="tvService8">8. 반납 시에는 별도의 QR 스캔 과정 없이 보관함에 우산을 돌려두는 것만으로 반납을 완료할 수 있습니다.</string>
    <string name="tvPasswordChangeTitle">비밀번호변경</string>
    <string name="tvNowPwTitle">현재 비밀번호</string>
    <string name="edtNowPw">현재 사용 중인 비밀번호를 입력해주세요</string>
    <string name="tvNowPw">현재 비밀번호를 잘못 입력하셨습니다.</string>
    <string name="tvNewPwTitle">새 비밀번호</string>
    <string name="edtNewPw">8자 이상 영문/숫자/특수문자 중 2가지 포함</string>
    <string name="tvNewPw">총 8자 이상, 용문/숫자/특수문자 중 2가지 이상 입력해주세요.</string>
    <string name="tvNewCkPwTitle">새 비밀번호 확인</string>
    <string name="edtNewCkPw">비밀번호를 다시 한 번 입력해주세요</string>
    <string name="tvNewCkPw">비밀번호가 일치하지 않습니다. 다시 입력해주세요.</string>
    <string name="btnChangePw">비밀번호 변경하기</string>
    <string name="tvAccountSetting">정보수정</string>
    <string name="tvAccountID">USERID</string>
    <string name="btnPasswordChange">비밀번호 변경</string>
    <string name="tvDeletingAccount">탈퇴하기</string>
    <string name="tvEmailTitle">이메일</string>
    <string name="tvEmail">test@example.com</string>
    <string name="edtEmail">수정할 이메일을 입력하세요</string>
    <string name="tvTelTitle">전화번호</string>
    <string name="tvTel">010-XXXX-XXXX</string>
    <string name="edtTel">수정할 전화번호를 입력하세요</string>
    <string name="tvAddressTitle">주소</string>
    <string name="tvAddress">광주광역시 동구 예술길 31-15</string>
    <string name="edtAddress">수정할 주소를 입력하세요</string>
    <string name="btnChange">수정</string>
    <string name="tvPaymentTitle">결제관리</string>
    <string name="tvcardAdd">카드 등록하기</string>
    <string name="tvCardRegisterTitle">카드등록</string>
    <string name="tvCardNumTitle">카드번호</string>
    <string name="tvCardExpiryDateTitle">유효기간</string>
    <string name="tvCardPwTitle">비밀번호</string>
    <string name="tvCardDOBTitle">생년월일</string>
    <string name="tvUsageHistoryTitle">이용내역</string>
    <string name="tvRental">2022.05.01</string>
    <string name="tvDash">-</string>
    <string name="tvReturn">2022.05.08</string>
    <string name="tvUmgSeq">01</string>
    <string name="tvRentalLoc">대여 장소에서 대여</string>
    <string name="tvReturnLoc">반납 장소에서 반납</string>
    <string name="tvWon">￦</string>
    <string name="tvRentalFare">0,000</string>
    <string name="btnPayview">닫기</string>
    <string name="navMain">홈</string>
    <string name="navCommu">커뮤니티</string>
    <string name="navMypage">마이페이지</string>
    <string name="navMore">더보기</string>
    <string name="mapCardTitle">UmCycle</string>
    <string name="mapCardLoc">광주 동구 예술길 31-15 3~5</string>
    <string name="mapCardUmb">우산</string>
    <string name="mapCardUmbCnt">5개</string>
    <string name="mapCardUmbChild">어린이 우산</string>
    <string name="mapCardUmbChildCnt">0개</string>
    <string name="mapCardSeq">00</string>
    <string name="mapCardQr">대여하기</string>
</resources>