<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".service.ServiceActivity">

<androidx.constraintlayout.widget.ConstraintLayout
android:id="@+id/constraintLayout6"
android:layout_width="match_parent"
android:layout_height="0dp"
android:background="#2196F3"
app:layout_constraintBottom_toTopOf="@+id/guideline18"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent">

<TextView
    android:id="@+id/tvServiceTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tvServiceTitle"
    android:textColor="#FFFFFF"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
android:id="@+id/constraintLayout7"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:padding="16dp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvServiceService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/tvServiceService"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider18"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="15dp"
            android:background="@color/blueColor" />

        <TextView
            android:id="@+id/tvServiceText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tvServiceText1"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvServiceText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tvServiceText2"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvService1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tvService1"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvService2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tvService2"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvService3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tvService3"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvService4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tvService4"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvService5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tvService5"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvService6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tvService6"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvService7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tvService7"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvService8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/tvService8"
            android:textColor="#000000" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.Guideline
android:id="@+id/guideline18"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal"
app:layout_constraintGuide_begin="60dp" />

<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="0dp"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline19"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.97" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>