<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".PasswordChangeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnPasswordChangePre"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/arrowleft"
                android:tint="@color/blueColor" />

            <TextView
                android:id="@+id/tvPasswordChangeTitle"
                android:layout_width="312dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tvPasswordChangeTitle"
                android:textAlignment="center"
                android:textColor="@color/blueColor"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tvNowPwTitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:text="@string/tvNowPwTitle"
            android:textColor="@color/blueColor" />

        <EditText
            android:id="@+id/edtNowPw"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edtNowPw"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvNowPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/tvNowPw"
            android:textColor="#CCFF0000"
            android:textSize="12sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvNewPwTitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:text="@string/tvNewPwTitle"
            android:textColor="@color/blueColor" />

        <EditText
            android:id="@+id/edtNewPw"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edtNewPw"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvNewPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/tvNewPw"
            android:textColor="#CCFF0000"
            android:textSize="12sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvNewCkPwTitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:text="@string/tvNewCkPwTitle"
            android:textColor="@color/blueColor" />

        <EditText
            android:id="@+id/edtNewCkPw"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edtNewCkPw"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvNewCkPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/tvNewCkPw"
            android:textColor="#CCFF0000"
            android:textSize="12sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnChangePw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blueColor"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btnChangePw"
            android:textStyle="bold"
            app:cornerRadius="7dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>