<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="6dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgCommentProfile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:src="@drawable/umbrella2"
        app:civ_circle_background_color="#C8C8C8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCommentNick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="left"
        android:text="@string/tvCommentNick"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgCommentProfile"
        app:layout_constraintTop_toTopOf="@+id/imgCommentProfile" />

    <TextView
        android:id="@+id/tvCommentContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="left"
        android:text="@string/tvCommentContent"
        android:textColor="#000000"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/tvCommentNick"
        app:layout_constraintTop_toBottomOf="@+id/tvCommentNick" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tvCommentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="left"
        android:text="@string/tvCommentTime"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tvCommentNick"
        app:layout_constraintTop_toBottomOf="@+id/tvCommentContent" />

    <TextView
        android:id="@+id/tvSeq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/round"
        android:padding="4dp"
        android:text="@string/tvWriter"
        android:textColor="#FFFFFF"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvCommentNick"
        app:layout_constraintStart_toEndOf="@+id/tvCommentNick"
        app:layout_constraintTop_toTopOf="@+id/tvCommentNick" />

    <TextView
        android:id="@+id/tvCommentReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/tvCommentReport"
        android:textColor="@color/blueColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/tvCommentModify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="right"
        android:text="@string/tvCommentModify"
        android:textColor="@color/blueColor"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tvCommentDel"
        app:layout_constraintEnd_toStartOf="@+id/tvCommentDel"
        app:layout_constraintTop_toTopOf="@+id/tvCommentDel" />

    <TextView
        android:id="@+id/tvCommentDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="right"
        android:text="@string/tvCommentDel"
        android:textColor="@color/blueColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCommentReport"
        app:layout_constraintEnd_toStartOf="@+id/tvCommentReport"
        app:layout_constraintTop_toTopOf="@+id/tvCommentReport" />

    <EditText
        android:id="@+id/edtCommentContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:padding="3dp"
        android:text="@string/edtCommentContent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvCommentContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCommentNick"
        app:layout_constraintTop_toBottomOf="@+id/tvCommentNick"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/tvCommentSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tvCommentSuccess"
        android:textColor="@color/blueColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCommentDel"
        app:layout_constraintEnd_toStartOf="@+id/tvCommentDel"
        app:layout_constraintTop_toTopOf="@+id/tvCommentDel" />

</androidx.constraintlayout.widget.ConstraintLayout>