<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/supportListItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_shape"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/supportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/supportTitle"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/roundblack"
        android:padding="4dp"
        android:text="@string/tvSet"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/supportTitle"
        app:layout_constraintStart_toEndOf="@+id/supportTitle"
        app:layout_constraintTop_toTopOf="@+id/supportTitle" />

    <TextView
        android:id="@+id/supportTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/supportTime"
        app:layout_constraintBottom_toBottomOf="@+id/supportSeq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/supportSeq" />

    <TextView
        android:id="@+id/supportSeq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="right"
        android:text="@string/supportSeq"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="@+id/supportTitle"
        app:layout_constraintTop_toBottomOf="@+id/supportTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>